--- a/PyTorch/11-Deep Convolutional Generative Adversarial Network/main.ipynb
+++ b/PyTorch/11-Deep Convolutional Generative Adversarial Network/main.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d9256a5d355c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdsets\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransforms\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision\n",
@@ -18,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'transforms' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-8b356e5a1c6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m#图片预处理\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m transform = transforms.Compose([\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mtransforms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mScale\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m36\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mtransforms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRandomCrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mtransforms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transforms' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#图片预处理\n",
     "transform = transforms.Compose([\n",
@@ -35,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,26 +115,54 @@
    },
    "outputs": [],
    "source": [
+    "nc = 64\n",
+    "ndf = 64\n",
+    "ngf = 64\n",
     "#构建判别网络\n",
-    "class Discriminator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Discriminator, self).__init__()\n",
-    "        self.model = nn.Sequential(\n",
-    "            conv4x4(3, 16, 2),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            conv4x4(16, 32, 2),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            conv4x4(32, 64, 2), \n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.LeakyReLU(0.2, inplace=True),\n",
-    "            nn.Conv2d(64, 1, kernel_size=4),\n",
-    "            nn.Sigmoid())\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        out = self.model(x)\n",
-    "        out = out.view(out.size(0), -1)\n",
-    "        return out"
+    "class netD(nn.Module):\n",
+    "    def __init__(self, ndf=64, n_layers=3, norm_layer=nn.BatchNorm2d, use_sigmoid=True):\n",
+    "        super(netD, self).__init__()\n",
+    "\n",
+    "        kw = 4\n",
+    "        input_nc = 2\n",
+    "\n",
+    "        padw = int(np.ceil((kw - 1) / 2))\n",
+    "        sequence = [\n",
+    "            nn.Conv2d(input_nc, ndf, kernel_size=kw, stride=2, padding=padw),\n",
+    "            nn.LeakyReLU(0.2, True)\n",
+    "        ]\n",
+    "\n",
+    "        nf_mult = 1\n",
+    "        nf_mult_prev = 1\n",
+    "        for n in range(1, n_layers):\n",
+    "            nf_mult_prev = nf_mult\n",
+    "            nf_mult = min(2 ** n, 8)\n",
+    "            sequence += [\n",
+    "                nn.Conv2d(ndf * nf_mult_prev, ndf * nf_mult,\n",
+    "                          kernel_size=kw, stride=2, padding=padw),\n",
+    "                norm_layer(ndf * nf_mult),\n",
+    "                nn.LeakyReLU(0.2, True)\n",
+    "            ]\n",
+    "\n",
+    "        nf_mult_prev = nf_mult\n",
+    "        nf_mult = min(2 ** n_layers, 8)\n",
+    "        sequence += [\n",
+    "            nn.Conv2d(ndf * nf_mult_prev, ndf * nf_mult,\n",
+    "                      kernel_size=kw, stride=1, padding=padw),\n",
+    "            norm_layer(ndf * nf_mult),\n",
+    "            nn.LeakyReLU(0.2, True)\n",
+    "        ]\n",
+    "\n",
+    "        sequence += [nn.Conv2d(ndf * nf_mult, 1, kernel_size=kw, stride=1, padding=padw)]\n",
+    "\n",
+    "        if use_sigmoid:\n",
+    "            sequence += [nn.Sigmoid()]\n",
+    "\n",
+    "        self.model = nn.Sequential(*sequence)\n",
+    "\n",
+    "    def forward(self, input):\n",
+    "        output = self.model(input)\n",
+    "        return output.view(-1, 1).squeeze(1)"
    ]
   },
   {
@@ -159,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -282,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
